--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "animejs": "^3.2.2",
+    "matter-js": "^0.20.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-router-dom": "^7.4.1"
@@ -19,6 +20,7 @@
     "@eslint/js": "^9.21.0",
     "@tailwindcss/vite": "^4.1.1",
     "@types/animejs": "^3.1.13",
+    "@types/matter-js": "^0.19.8",
     "@types/react": "^19.0.10",
     "@types/react-dom": "^19.0.4",
     "@types/react-router-dom": "^5.3.3",
