--- a/package.json
+++ b/package.json
@@ -11,7 +11,11 @@
     "deploy": "npm run build && git add dist -f && git commit -m 'deploy' && git subtree push --prefix dist origin gh-pages"
   },
   "dependencies": {
+    "@react-spring/three": "^10.0.1",
+    "@react-three/drei": "^10.3.0",
+    "@react-three/fiber": "^9.1.2",
     "animejs": "^3.2.2",
+    "dat.gui": "^0.7.9",
     "matter-js": "^0.20.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
@@ -22,6 +26,7 @@
     "@eslint/js": "^9.21.0",
     "@tailwindcss/vite": "^4.1.1",
     "@types/animejs": "^3.1.13",
+    "@types/dat.gui": "^0.7.13",
     "@types/matter-js": "^0.19.8",
     "@types/react": "^19.0.10",
     "@types/react-dom": "^19.0.4",
